--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -10,7 +10,7 @@ Start of RIP and SkyPix support (incomplete)
 Added a comment field to listings
 Default connection type changed to SSH
 ALT-Left/ALT-Right for window size snapping, ALT-Up/ALT-Down for speed
-Use the colodore C64 palette with "most common" adjustments
+Use the comodore C64 palette with "most common" adjustments
 On Windows, indicate "awareness" for "High DPI"
 Prefer X11 mode over SDL mode
 Fix scrolling with left/right margins
@@ -22,6 +22,9 @@ Allow hardware scaling in X11, GDI, and SDL modes
 Support XTerm Bracketed Paste
 Add -b and -n command-line options for BBS list and INI file respectively
 Add ALT-O to toggle remote mouse support (to enable copy/paste locally)
+Support LCF as defined in STD-070
+Support upploading SSH public key over SFTP channel in SSH mode
+Add "Yellow is Yellow" option
 
 Version 1.1
 -----------
