--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -26,6 +26,7 @@ Support LCF as defined in STD-070
 Support upploading SSH public key over SFTP channel in SSH mode
 Add "Yellow is Yellow" option
 Insert mode defaults to on in UIFC text input fields
+Underline cursor for insert mode, block on overstrike in UIFC fields
 
 Version 1.1
 -----------
