--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -6,6 +6,7 @@ Fix status bar display when RIP changes number of lines on screen
 Fix some use-after-free bugs in RIP
 Fix reversed mouse wheel in GDI mode
 Have the X11 IC focus follow window focus
+Fix WM_SETCURSOR handling to allow crabbing resize points in GDI
 
 Version 1.2rc1
 --------------
