--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -7,6 +7,7 @@ Fix some use-after-free bugs in RIP
 Fix reversed mouse wheel in GDI mode
 Have the X11 IC focus follow window focus
 Fix WM_SETCURSOR handling to allow crabbing resize points in GDI
+Added "Build Options" menu item
 
 Version 1.2rc1
 --------------
