Remove cast-to-int in gdi_getscaling
This fixes bug 141, which is currently the last blocker for rc2.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -11,6 +11,7 @@ Added "Build Options" menu item
 Fix focus-follows-mouse behaviour in herbstluftwm
 Fix SAUCE binary capture date
 Add Build Options menu item
+Fix saving non-integer scaling in GDI mode
 
 Version 1.2rc1
 --------------
