Fix memory leak in initializing vmem.
Much easier to fix it this way than to figure out why X11 needs to
init it before bitmap_con does.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -12,6 +12,7 @@ Fix focus-follows-mouse behaviour in herbstluftwm
 Fix SAUCE binary capture date
 Add Build Options menu item
 Fix saving non-integer scaling in GDI mode
+Fix static 20k memory leak
 
 Version 1.2rc1
 --------------
