Add NetBSD fix note

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -13,6 +13,7 @@ Fix SAUCE binary capture date
 Add Build Options menu item
 Fix saving non-integer scaling in GDI mode
 Fix static 20k memory leak
+Fix NetBSD native curses requiring keypress to exit
 
 Version 1.2rc1
 --------------
