Mention CMake changes

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -14,6 +14,7 @@ Add Build Options menu item
 Fix saving non-integer scaling in GDI mode
 Fix static 20k memory leak
 Fix NetBSD native curses requiring keypress to exit
+Fix CMake-based build system
 
 Version 1.2rc1
 --------------
