Initial Haiku support.
CMake only, has issues.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,3 +1,7 @@
+Version 1.2rc3
+--------------
+Get Haiku support building again
+
 Version 1.2rc2
 --------------
 Start UIFC in insert mode, and use block cursor for overwrite mode
