--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,6 +1,7 @@
 Version 1.2rc3
 --------------
 Get Haiku support building again
+Properly quit video subsystem from video thread - fixes Haiku crash
 
 Version 1.2rc2
 --------------
