--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -4,6 +4,7 @@ Get Haiku support building again
 Properly quit video subsystem from video thread - fixes Haiku crash
 Create dirs on macOS when needed - fixes adding first BBS
 Fix cache subdirectories on Windows
+Make File Locations window wider
 
 Version 1.2rc2
 --------------
