Remove cases where pointy falls back to blocky.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,3 +1,7 @@
+Version 1.2rc4
+--------------
+Fix pointy scaling to work even when interpolating both directions
+
 Version 1.2rc3
 --------------
 Get Haiku support building again
