--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,6 +1,7 @@
 Version 1.2rc4
 --------------
 Fix pointy scaling to work even when interpolating both directions
+Fix ATASCII input
 
 Version 1.2rc3
 --------------
