Fix -iW colors in conio.
SetConsoleScreenBufferInfoEx() can no longer set colors in the
console palette.  Switch to virtual terminal parsing stuff and send
some ANSI to adjust the palette instead.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -2,6 +2,7 @@ Version 1.2rc4
 --------------
 Fix pointy scaling to work even when interpolating both directions
 Fix ATASCII input
+Fix -iW colors
 
 Version 1.2rc3
 --------------
