Fix issue with RIP and fragmented ANSI
If an ANSI sequence spanned multiple recv() calls, it would get
silently dropped if RIP was enabled.

Reported by skipperdoodle1947 (who does awesome stuff)

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -9,6 +9,7 @@ Fix telnets (broken when sftp support was added)
 Update ANSI and win32 console support
 Fix bug with window resizing calculations
 New icons thanks to zuMi!
+Fix RIP parsing when passed fragmented ANSI sequences
 
 Version 1.2rc3
 --------------
