--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -10,6 +10,7 @@ Update ANSI and win32 console support
 Fix bug with window resizing calculations
 New icons thanks to zuMi!
 Fix RIP parsing when passed fragmented ANSI sequences
+Fix cursor when RIP changes font height
 
 Version 1.2rc3
 --------------
