Fix mouse select in scrollback
Both selecting scrollback from the online menu, and viewing the last
scrollback from the main menu were impacted.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -4,6 +4,7 @@ Fix RIP parsing when passed fragmented ANSI sequences
 Fix cursor when RIP changes font height
 Fix Alt-O in RIP mode
 In telnet mode, always negotiate echo, binary, and suppress GA
+Fix mouse selection in scrollback
 
 Version 1.2rc4
 --------------
