More RIP fixes for dura-bbs.net
RIP XOR operation had issues with polylines, boxes, etc. where the
same pixel could be written more than once, resulting in it being
toggled back to the original state.

Also, there were some memory leaks of temporary struct ciolib_pixel
variables.  This is now fixed as well.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -5,6 +5,8 @@ Fix cursor when RIP changes font height
 Fix Alt-O in RIP mode
 In telnet mode, always negotiate echo, binary, and suppress GA
 Fix mouse selection in scrollback
+Fix RIP XOR operation
+Fix memory leak in RIP parser
 
 Version 1.2rc4
 --------------
