--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -7,6 +7,7 @@ In telnet mode, always negotiate echo, binary, and suppress GA
 Fix mouse selection in scrollback
 Fix RIP XOR operation
 Fix memory leak in RIP parser
+Fix handling of split CRLF pairs in RIP mode
 
 Version 1.2rc4
 --------------
