Don't reset font in RIPv3 mode
It appears v3 kept the font through a RIP_RESET_WINDOWS command

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -8,6 +8,7 @@ Fix mouse selection in scrollback
 Fix RIP XOR operation
 Fix memory leak in RIP parser
 Fix handling of split CRLF pairs in RIP mode
+Don't change font for RIP_RESET_WINDOWS in RIPv3 mode
 
 Version 1.2rc4
 --------------
