--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -9,6 +9,7 @@ Fix RIP XOR operation
 Fix memory leak in RIP parser
 Fix handling of split CRLF pairs in RIP mode
 Don't change font for RIP_RESET_WINDOWS in RIPv3 mode
+Initial support for Prestel mode
 
 Version 1.2rc4
 --------------
