--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,3 +1,7 @@
+Version 1.2rc6
+--------------
+Prestel fixes for Steady and Concealed modes
+
 Version 1.2rc5
 --------------
 Fix RIP parsing when passed fragmented ANSI sequences
