--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,6 +1,7 @@
 Version 1.2rc6
 --------------
 Prestel fixes for Steady and Concealed modes
+Set default prestel ID to zero characters for CCl4
 
 Version 1.2rc5
 --------------
