--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,3 +1,7 @@
+Version 1.2rc7
+--------------
+Allow clicking in the comment line to edit
+
 Version 1.2rc6
 --------------
 Prestel fixes for Steady and Concealed modes
