--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,6 +1,7 @@
 Version 1.2rc7
 --------------
 Allow clicking in the comment line to edit
+Fix window resize on macOS with retina displays
 
 Version 1.2rc6
 --------------
