--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -2,6 +2,7 @@ Version 1.2rc7
 --------------
 Allow clicking in the comment line to edit
 Fix window resize on macOS with retina displays
+Fix deleting of not-last item when list is at bottom
 
 Version 1.2rc6
 --------------
