--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -4,6 +4,7 @@ Allow clicking in the comment line to edit
 Fix window resize on macOS with retina displays
 Fix deleting of not-last item when list is at bottom
 Fix GDI behaviour when deactivating in fullscreen mode
+Add blank pixel to left and top of Prestel DEL glyph
 
 Version 1.2rc6
 --------------
