--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -5,6 +5,9 @@ Fix window resize on macOS with retina displays
 Fix deleting of not-last item when list is at bottom
 Fix GDI behaviour when deactivating in fullscreen mode
 Add blank pixel to left and top of Prestel DEL glyph
+Fix crash when editing blank "extra" bbslist entry
+Support copy/paste in BBS list
+Show current list path, not default in File Locations
 
 Version 1.2rc6
 --------------
