--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -10,6 +10,7 @@ Support copy/paste in BBS list
 Show current list path, not default in File Locations
 Explicitly set serial port to 8N1
 Add support bit data bits, stop bits, and parity
+Drain modem buffer before sending init command
 
 Version 1.2rc6
 --------------
