Make the same as the syncterm-1.2 branch

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -17,7 +17,7 @@ Version 1.2rc6
 --------------
 Prestel fixes for Steady and Concealed modes
 Set default prestel ID to zero characters for CCl4
-Modify scaler to use integer math
+Modify scaler to use integer math, fixes issue on macOS
 
 Version 1.2rc5
 --------------
