Re-order entry fields.
This makes more sense.  Also, ones that are meaningless are hidden
now.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,3 +1,8 @@
+Version 1.4a
+------------
+Re-order BBS list entry fields
+Fix various Prestel mode bugs
+
 Version 1.3
 -----------
 Fix critical bug when editing a BBS listing
