--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -3,6 +3,7 @@ Version 1.4b
 Fix crashes in text modes due to rip code being called
 Add support for ALT+XXX and ALT+0XXXXX key entry
 Support Shell connections on Windows 10+
+Windows builds now include a .com (console) and a .exe (GUI) binary
 
 Version 1.4a
 ------------
