Mention the fix for minimal X servers

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -5,6 +5,7 @@ Add support for ALT+XXX and ALT+0XXXXX key entry
 Support Shell connections on Windows 10+
 Windows builds now include a .com (console) and a .exe (GUI) binary
 Better socket disconnect detection in SSH and telnets sessions
+Fix X11 mode scaling and fullscreen with minimal X servers
 
 Version 1.4a
 ------------
