--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -7,6 +7,7 @@ Windows builds now include a .com (console) and a .exe (GUI) binary
 Better socket disconnect detection in SSH and telnets sessions
 Fix X11 mode scaling and fullscreen with minimal X servers
 Massively improve output performance
+Add option to configure audio output
 
 Version 1.4a
 ------------
