Reduce audio level by -12dB.
It was at absolute max (an extra one and it would clip) which is
really a terrible thing to do to people wearing headphones.

I don't really need to do it this way, but the math for the different
wave forms depends heavily on integer wrapping (and WAVE_SHAPE_SINE_HARM
is just stupid).

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -8,6 +8,7 @@ Better socket disconnect detection in SSH and telnets sessions
 Fix X11 mode scaling and fullscreen with minimal X servers
 Massively improve output performance
 Add option to configure audio output
+Lower audio output volume by 12dB
 
 Version 1.4a
 ------------
