Refine SAA5050 state based on Keyop's experiments
It seems there is a "hold mosaic" mode, but it doesn't completely
avoid look-behind when it's set.  The rules for what "clears" the
held mosaic when not in hold mosic mode are a bit murky... added
extra2.pst to test.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -2,6 +2,7 @@ Version 1.5b
 ------------
 Fix Prestel regressions
 Use the SAA5050 font for Prestel mode
+Prestel mode is 25 rows, not 24
 
 Version 1.5a
 ------------
