Add toggle to invert mouse wheel.
It actually inverts buttons four and five, but we're not going to
tell people that.

Implements feature request 75.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -3,6 +3,8 @@ Version 1.5b
 Fix Prestel regressions
 Use the SAA5050 font for Prestel mode
 Prestel mode is 25 rows, not 24
+Add setting to invert mouse wheel
+Support web-based dialing directories
 
 Version 1.5a
 ------------
