--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -5,6 +5,7 @@ Use the SAA5050 font for Prestel mode
 Prestel mode is 25 rows, not 24
 Add setting to invert mouse wheel
 Support web-based dialing directories
+Alt+Home now centres the window on the screen
 
 Version 1.5a
 ------------
