Mention the removal of login delays.
20ms, so you wouldn't notice, but it may be the cause of problem
reports in the future, so best to have it logged somewhere.

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -7,6 +7,7 @@ Add setting to invert mouse wheel
 Support web-based dialing directories
 Alt+Home now centres the window on the screen
 Option to defer telnet negotiation
+Remove delays when sending login data
 
 Version 1.5a
 ------------
