--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -1,6 +1,7 @@
 Version 1.6b
 ------------
 Fix regression in Atari auto-login
+Disable Prestel ENQ/Memory in BBC Micro Mode 7
 
 Version 1.5
 ------------
