Ignore errors removing old list file
If there's a problem, we'll catch it on the rename(), no need to
add a race condition by checking if it exists first.

Should fix issue 190

--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -2,6 +2,7 @@ Version 1.6b
 ------------
 Fix regression in Atari auto-login
 Disable Prestel ENQ/Memory in BBC Micro Mode 7
+Fix error adding a new Web List
 
 Version 1.5
 ------------
