--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -4,6 +4,7 @@ Fix regression in Atari auto-login
 Disable Prestel ENQ/Memory in BBC Micro Mode 7
 Fix error adding a new Web List
 Enable cursor for Mode 7
+Adjust Prestel/Mode 7 mappings
 
 Version 1.5
 ------------
