Add Atari ST VT52 modes
Completes feature request #95
Have fun kids!

--- a/src/conio/ciolib.adoc
+++ b/src/conio/ciolib.adoc
@@ -505,5 +505,13 @@ following table summarizes the available fonts.
 |
 |
 |√
-|ISO_8859_1
+|SAA5050
+|===
+
+|Atari ST
+|√
+|
+|√
+|
+|Atari ST
 |===
