--- a/src/syncterm/CHANGES
+++ b/src/syncterm/CHANGES
@@ -4,6 +4,7 @@ Fix APB and APU from top in BBC Micro Mode 7
 Fix blast-through in Mode 7 high ASCII mosaics
 Update Prestel/Mode 7 keybindings
 Don't disable status line for Atari ST modes
+Fix broken vertical (U+00A6) vs. vertical line (U+007C)
 
 Version 1.6
 ------------
